weather/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-svc
spec:
  selector:
    app: weather-app
  ports:
    - name: http-weather
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
