weather/k8s/virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-virtual-svc
spec:
  hosts:
    - "*"
  gateways:
    - weather-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: weather-svc
            port:
              number: 8080
